# test-semantic-release-py

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: release-main.yml  release-staging.yml
