[project]
name = "test-semantic-release-py"
version = "2.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "python-semantic-release>=9.17.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_vcs_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.staging]
match = "staging"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test", "hotfix"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "hotfix"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
